project(ALGO)
cmake_minimum_required(VERSION 3.1.3)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_STANDARD 99)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")


add_definitions(-DOS_LINUX)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/common/include)

# set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})

aux_source_directory(${PROJECT_SOURCE_DIR}/common/src src_base)

ADD_SUBDIRECTORY(01_shm)
ADD_SUBDIRECTORY(02_sem)
ADD_SUBDIRECTORY(03_msg)
ADD_SUBDIRECTORY(04_cshmfifo)
ADD_SUBDIRECTORY(05_ckfifo)
ADD_SUBDIRECTORY(06_cthreadpool)
ADD_SUBDIRECTORY(07_cjson)
ADD_SUBDIRECTORY(08_shm_value)
ADD_SUBDIRECTORY(09_plog)