ADD_EXECUTABLE(test_block_http_client test_block_http_client.c)
TARGET_LINK_LIBRARIES(test_block_http_client)

ADD_EXECUTABLE(forking_rot13_server forking_rot13_server.c)
TARGET_LINK_LIBRARIES(forking_rot13_server)



ADD_EXECUTABLE(1_first_libevent 1_first_libevent.cpp)
TARGET_LINK_LIBRARIES(1_first_libevent event)

ADD_EXECUTABLE(2_test_server 2_test_server.cpp)
TARGET_LINK_LIBRARIES(2_test_server event)

ADD_EXECUTABLE(3_test_conf 3_test_conf.cpp)
TARGET_LINK_LIBRARIES(3_test_conf event)

ADD_EXECUTABLE(4_test_signal 4_test_signal.cpp)
TARGET_LINK_LIBRARIES(4_test_signal event)

ADD_EXECUTABLE(5_test_timer 5_test_timer.cpp)
TARGET_LINK_LIBRARIES(5_test_timer event)

ADD_EXECUTABLE(6_test_file 6_test_file.cpp)
TARGET_LINK_LIBRARIES(6_test_file event)

ADD_EXECUTABLE(7_test_event_server 7_test_event_server.cpp)
TARGET_LINK_LIBRARIES(7_test_event_server event)

ADD_EXECUTABLE(8_test_signal_loop 8_test_signal_loop.cpp)
TARGET_LINK_LIBRARIES(8_test_signal_loop event)


ADD_EXECUTABLE(9_test_buffer 9_test_buffer.cpp)
TARGET_LINK_LIBRARIES(9_test_buffer event)

ADD_EXECUTABLE(10_test_buffer_client 10_test_buffer_client.cpp)
TARGET_LINK_LIBRARIES(10_test_buffer_client event)

ADD_EXECUTABLE(11_test_buffer_filter 11_test_buffer_filter.cpp)
TARGET_LINK_LIBRARIES(11_test_buffer_filter event)


ADD_SUBDIRECTORY(12_test_buffer_filter_zlib)